发送表情包

--- a/src/assets/iconfont/demo_fontclass.html
+++ b/src/assets/iconfont/demo_fontclass.html
@@ -43,6 +43,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont icon-pen"></i>
+                    <div class="name">pen</div>
+                    <div class="fontclass">.icon-pen</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont icon-eye"></i>
                     <div class="name">eye</div>
                     <div class="fontclass">.icon-eye</div>
