--- a/src/assets/iconfont/demo_symbol.html
+++ b/src/assets/iconfont/demo_symbol.html
@@ -69,6 +69,14 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-pen"></use>
+                    </svg>
+                    <div class="name">pen</div>
+                    <div class="fontclass">#icon-pen</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-eye"></use>
                     </svg>
                     <div class="name">eye</div>
