--- a/src/assets/iconfont/demo_unicode.html
+++ b/src/assets/iconfont/demo_unicode.html
@@ -63,6 +63,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont">&#xe67c;</i>
+                    <div class="name">pen</div>
+                    <div class="code">&amp;#xe67c;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe78f;</i>
                     <div class="name">eye</div>
                     <div class="code">&amp;#xe78f;</div>
