--- a/src/assets/iconfont/demo_fontclass.html
+++ b/src/assets/iconfont/demo_fontclass.html
@@ -37,6 +37,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont icon-undo"></i>
+                    <div class="name">undo</div>
+                    <div class="fontclass">.icon-undo</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont icon-user2"></i>
                     <div class="name">user</div>
                     <div class="fontclass">.icon-user2</div>
