--- a/src/assets/iconfont/demo_symbol.html
+++ b/src/assets/iconfont/demo_symbol.html
@@ -61,6 +61,14 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-undo"></use>
+                    </svg>
+                    <div class="name">undo</div>
+                    <div class="fontclass">#icon-undo</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-user2"></use>
                     </svg>
                     <div class="name">user</div>
