--- a/src/assets/iconfont/demo_unicode.html
+++ b/src/assets/iconfont/demo_unicode.html
@@ -57,6 +57,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont">&#xe62a;</i>
+                    <div class="name">undo</div>
+                    <div class="code">&amp;#xe62a;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe608;</i>
                     <div class="name">user</div>
                     <div class="code">&amp;#xe608;</div>
