头像修改，身份认证

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>airchat</title>
+    <title>西科陌陌</title>
     <!-- <script src=></script> -->
     <script src="http://at.alicdn.com/t/font_541713_6k7oo8m50xu323xr.js"></script>
   </head>
